# watertank-gantry

./: .gitignore  .gitmodules  README.md
Arduino/: README.md
Arduino/DRV8833/: DRV8833.ino
Arduino/Marlin/: .gitignore
Arduino/MotorEncoder/: README.md
Documentation/: roscore
Marlin-1.1.x/Marlin/: Configuration.h  Configuration_adv.h
Matlab/: GCode1SamplePerturbation1.gcode  GCodeGenerator.m  README.md  TrajToGCode.m  TrajectoryPerturbation.m  TrajectoryPlotter.m
Matlab/DATA/: clarkTest10_00mm.txt
Matlab/Version 1 and 2/: TrajPerturbation.m  TrajectoryGenerator.m
Matlab/Version 3/: GCodeGeneratorVersion3.m  RandTrajectoryPerturbationV3.m  TrajPerturbationV3.m  TrajToGCodeV3.m  TrajectoryGeneratorV3.m  TrajectoryPlotterV3.m  errorCubeV3.m
Matlab/Version 4/: GCodeGeneratorVersion4.asv  GCodeGeneratorVersion4.m  MoveToFolderV4.m  TrajPerturbationV4.m  TrajToGCodeV4.m  TrajectoryGeneratorV4.m  TrajectoryPlotterV4.m  errorCubeV4.m
ROS/catkin_ws/: README.md  (+10 more)
ROS/catkin_ws/src/ros-video-recorder-master/: CMakeLists.txt
ROS/catkin_ws/src/ros-video-recorder-master/launch/: cam2x2grid.launch
ROS/catkin_ws/src/ros-video-recorder-master/scripts/: camera_server.py  recorder.py  recorder_server.py
ROS/catkin_ws/src/ros-video-recorder-master/srv/: cam_control.srv
Trajectories/: recent.txt
Utilities/: backup.sh  data2groupdrive.py
Vision Testing/: banana_test.py  contour.py  example.txt  point_extractor.py  polyfit.py  polyplot.py  select_input.py  sliding_window.py  testing_skript.py  webcam.py  webcam_test.py
build_trajectory_sweeps/: build_sweep.py
(+630 files in other folders)
